[package]
name = "futsu_no_linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
anyhow = "1.0.79"

[dev-dependencies]
assert_cmd = "2.0.12"

[[bin]]
name = "cat"
path = "src/05/cat/main.rs"

[[bin]]
name = "wc"
path = "src/05/wc/main.rs"

[[bin]]
name = "cat_no_libc"
path = "src/06/cat_no_libc/main.rs"
