[package]
name = "futsu_no_linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
anyhow = "1.0.79"
tempfile = "3.9.0"
regex = "1.10.2"

[dev-dependencies]
assert_cmd = "2.0.12"
rand = "0.8.5"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cat"
path = "src/05/cat/main.rs"

[[bin]]
name = "wc"
path = "src/05/wc/main.rs"

[[bin]]
name = "cat_no_libc"
path = "src/06/cat_no_libc/main.rs"

[[bin]]
name = "head"
path = "src/07/head/main.rs"

[[bin]]
name = "tail"
path = "src/07/tail/main.rs"

[[bin]]
name = "grep"
path = "src/08/grep/main.rs"

[[bin]]
name = "ls"
path = "src/10/ls/main.rs"

[[bin]]
name = "mkdir"
path = "src/10/mkdir/main.rs"

[[bin]]
name = "rmdir"
path = "src/10/rmdir/main.rs"

[[bin]]
name = "16_http_server"
path = "src/16/http_server/main.rs"
